jupyter nb1.ipynb

--- a/jupyter/requirements.in
+++ b/jupyter/requirements.in
@@ -1,6 +1,6 @@
 # This file lists the Python libraries used in the virtual enviroment.
 # See the venv.ps1 and venv.sh scripts in this directory.
-# Chris Joakim, Microsoft
+# Chris Joakim
 
 Jinja2
 arrow
