--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -75,6 +75,8 @@ dnspython==2.6.1
     # via
     #   -r requirements.in
     #   pymongo
+docopt==0.6.2
+    # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
 executing==2.0.1
